Changed background-attachment to scroll for mobile device to avoid blurring

--- a/frontend/src/Components/HeroImage.css
+++ b/frontend/src/Components/HeroImage.css
@@ -11,11 +11,11 @@
 }
 
 /*Images inside carousel*/
-.carousel img{
+/* .carousel img{
     width: 100%;
     position: absolute;
     transition: opacity 0.3s linear;
-}
+} */
 
 .carousel-text{
     width: 100%;
@@ -37,6 +37,7 @@
 @media only screen and (max-width:768px){
     .carousel{
         height: 50vh;
+        background-attachment: scroll !important;
     }
     .carousel-text{
         font-size: 1.5em;
